修正已知bug，使接口格式符合测试标准

--- a/BookstoreDjango/data_migrate.ipynb
+++ b/BookstoreDjango/data_migrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 重新加载sqlite数据库，此时转存书籍数据\n",
-    "sqlite_db = sqlite3.connect(\"C:/Users/Airthe911/Desktop/课程/当代数据管理系统/2023_ECNU_PJ1_第几组/2023_ECNU_PJ1_第几组/bookstore/fe/data/book.db\")\n",
+    "sqlite_db = sqlite3.connect(\"C:/Users/Airthe911/Desktop/课程/当代数据管理系统/data/book.db\")\n",
     "cur_s = sqlite_db.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
