--- a/BookstoreDjango/requests.ipynb
+++ b/BookstoreDjango/requests.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'status': 200, 'message': 'ok'}\n"
+      "请求失败，状态码： 331\n"
      ]
     }
    ],
@@ -38,14 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'status': 200, 'message': 'ok', 'token': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoiQWlydGhlOTExIiwidGVybWluYWwiOiJQQyIsInRpbWVzdGFtcCI6MTcwMzMwMzUwNi41OTgyNTkyfQ.I1fO_ZPSHGFtTll1MaaO5CaUEcd_dR7Mhte4xaE8Wjc'}\n"
+      "200\n",
+      "{'status': 200, 'message': 'ok', 'token': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoiQWlydGhlOTExIiwidGVybWluYWwiOiJQQyIsInRpbWVzdGFtcCI6MTcwMzMyODk5Mi44Nzc1OTIzfQ.GT3ZLUhiLhwDyVYnnZLD6Ym02HnQ36ctsTT4pK-QXW8'}\n"
      ]
     }
    ],
@@ -54,7 +55,7 @@
     "  \n",
     "data = {  \n",
     "    \"user_id\": \"Airthe911\",  \n",
-    "    \"password\": \"091101\",\n",
+    "    \"password\": \"091101ABC\",  # 正确的密码为'091101', 此处密码为'123456'，为错误的密码\n",
     "    \"terminal\": \"PC\"\n",
     "}  \n",
     "  \n",
@@ -64,7 +65,7 @@
     "}  \n",
     "  \n",
     "response = requests.post(url, json=data, headers=headers)  \n",
-    "  \n",
+    "print(response.status_code)\n",
     "if response.status_code == 200:  \n",
     "    response_data = response.json()\n",
     "    print(response_data)  \n",
@@ -109,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'status': 200, 'message': 'Password changed successfully'}\n"
+      "{'status': 200, 'message': 'ok'}\n"
      ]
     }
    ],
@@ -125,8 +126,8 @@
     "  \n",
     "data = {  \n",
     "    \"user_id\": \"Airthe911\",  \n",
-    "    \"old_password\": \"091101\",\n",
-    "    \"new_password\": \"091101ABC\"\n",
+    "    \"oldPassword\": \"091101\",\n",
+    "    \"newPassword\": \"091101ABC\"\n",
     "}  \n",
     "  \n",
     "  \n",
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +415,7 @@
     "data = {  \n",
     "    \"user_id\": \"test2\",  \n",
     "    \"store_id\": \"坑钱神店\",\n",
-    "    \"book_id\": \"1000067\", \n",
+    "    \"book_id\": \"1000134\",\n",
     "    \"book_info\": json.dumps({\"price\": 20}),\n",
     "    \"stock_level\": 10\n",
     "}  \n",
